--- a/index.css
+++ b/index.css
@@ -432,6 +432,7 @@ span {
 .quantity-container {
     display: flex;
     border: 1px solid lightgrey;
+    justify-content: center;
 
 }
 
@@ -450,6 +451,21 @@ span {
     border-bottom: 1px solid #c2c1c1;
     /* width: 50%; */
     margin: 10px 150px;
+}
+.popup-main-container{
+    justify-content: center;
+    margin: 20px 0;
+    display: flex;
+}
+.popup-container{
+    padding: 5px;
+    background-color: #6fb859;
+    width: 50%;
+    justify-content: space-between;
+    display: flex;
+}
+.items-price{
+    display: flex;
 }
 
 .cart-divider {
